frontend/src/scss/Core.scss
@import "node_modules/bootstrap/scss/bootstrap";
@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;1,300&family=Open+Sans:wght@400;800&display=swap');

// Table variables
$table: (
  columns:(
    background-color: theme-color("dark"),
    color: white
  ),
  data: (
    odd: "",
    even:""
  ),
  selected-item: (
    background-color: rgba(0, 0, 0, 0.075)
  )
);


// Font variables
$title: (
  font:"Open Sans",
  type: sans-serif,
  weight:800
);

$paragraph: (
  font:"Lato",
  type: sans-serif,
  weight:400
);

@mixin font-style($type) {
  font-family: map_get($type, font), map_get($type, type);
  font-weight: map_get($type, weight);
}

// Headers
@for $i from 1 through 6 {
  h#{$i} {
    @include font-style($title)
  }
}

// Paragraphs, Labels, Links
label, p, a {
  @include font-style($paragraph);
}


html, body {
  height: 100%;
}

#sidebar, #content {
  min-height: 100vh;
}

.help {
  * {
    color: theme-color("dark");
  }
}

#sidebar {
  padding-top: 5px;
  background: theme-color("dark");
  color: color("white");

  #main-logo {
    width: 70%;
    padding-left: 60px;
  }

  #title {
    margin-top: 50px;
    margin-bottom: 10px;
    text-transform: uppercase;
  }
}

#navbar {
  padding-top: 10px;
  display: flex;
  justify-content: space-between;
  padding-left: 60px;
  padding-right: 60px;

  #main-logo {
    width: 190px;
    height: 90px;
  }

  .help {
    padding-top: 5px;
  }
}

a.link, button.link {
  color: #343A41;
  text-decoration: underline;
}

button, .btn {
  font-weight: bold;
}

.app-table {
  thead {
    background-color: map_get(map_get($table, columns), background-color);
    color: map_get(map_get($table, columns), color);
    border: 2px solid transparent;

    th:first-child {
      border-top-left-radius: 10px;
      border-top-color: transparent;
    }

    th:last-child {
      border-top-right-radius: 10px;
      border-top-color: transparent;
    }
  }
}


// Spinner Loader
.css-1skdk9r {
    display: block;
    margin: 0 auto;
}

.stats {
  .col {
    padding-left: 0;
    padding-right: 0;
  }
}

.order-by {
  display: flex;
  align-items: baseline;

  p {
    margin-right: 15px;
  }
}

.main-list {
  padding-top: 10px;
  padding-bottom: 10px;
  border-radius: 5px;
  background-color: #e6e6e6;
  overflow-x: hidden;
  overflow-x: auto;
  max-height: 60vh;
}

.general-info {

  button,
  a {
    font-weight: bold;
  }

  a {
    padding-top: 10px;
  }
}

.app-modal {
  .modal-header {
    border-bottom: 0;
  }

  .modal-footer {
    border-top: 0;
  }
}

.sidebar-menu {
  list-style-type: none;
  padding-left: 0;
  width: 100%;


  a {
    color: #ffffff;
    display: block;
    font-size: 1.2em;

    li {
      display: flex;
      align-items: center;
      padding-left: 30px;
      padding-top: 20px;
      padding-bottom: 20px;

      .icon {
        margin-right: 20px;
      }
    }
  }

  a:hover {
    text-decoration: none;
  }
}

